# voxpile

./: .gitignore  CMakeLists.txt  README.md  run.bat
.cache/clangd/index/: glad.c.E47697A2EF1170AC.idx  glad.h.FFF7DD398DEEE26E.idx  glfw3.h.131AD01990FEFA3B.idx  khrplatform.h.D06A2ED5A65CA2A6.idx  main.cpp.E6B46598B89A7D2C.idx  window.cpp.BB0F4BC530CB1C1B.idx  window.hpp.A4FE989CE1CB35B2.idx
assets/shaders/: lightingShader.frag
src/: glad.c  main.cpp
src/core/: window.cpp  window.hpp
src/rendering/: bufferLayout.cpp  bufferLayout.hpp  indexBuffer.cpp  indexBuffer.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp
